# LiteHtml.Maui

./: LICENSE.txt  LiteHtml.Maui.sln  README.md
.github/workflows/: dotnet.yml  release.yml
App1/: App1.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest
LiteHtmlMaui/: AssemblyInfo.cs  LiteHtmlMaui.csproj
LiteHtmlMaui.TestApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  BackgroundImagesPage.xaml  BackgroundImagesPage.xaml.cs  BordersPage.xaml  BordersPage.xaml.cs  DynamicPage.xaml  DynamicPage.xaml.cs  HtmlComparisonView.cs  ImagesPage.xaml  ImagesPage.xaml.cs  LiteHtmlMaui.TestApp.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  TextComparisonPage.xaml  TextComparisonPage.xaml.cs  TextPage.xaml  TextPage.xaml.cs
LiteHtmlMaui.TestApp/Properties/: launchSettings.json
LiteHtmlMaui.TestApp/Resources/: ResourceLoader.cs  Styles.xaml
LiteHtmlMaui/Controls/: ILiteHtml.cs  ILiteHtmlSource.cs  LiteHtml.cs
LiteHtmlMaui/Handlers/: LiteHtmlHandler.Android.cs  LiteHtmlHandler.Standard.cs  LiteHtmlHandler.Windows.cs  LiteHtmlHandler.cs  LiteHtmlHandler.iOS.cs
LiteHtmlMaui/Hosting/: ILiteHtmlConfiguration.cs  LiteHtmlAppHostBuilderExtensions.cs  LiteHtmlConfiguration.cs  LiteHtmlConfigurationBuilderExtensions.cs
LiteHtmlMaui/Resources/: ResourcesAnchor.cs  master.css
litehtml-maui-native/: CMakeLists.txt  CMakeSettings.json  build_android.cmd  build_ios.sh  build_windows.cmd  todo.txt
litehtml-maui-native/src/: litehtml-maui-container.cpp  litehtml-maui-container.h  litehtml-maui.cpp  litehtml-maui.h
(+15 files in other folders)
